Closed Bug 967926 Opened 11 years ago Closed 11 years ago

TSan: data race js/src/../../js/src/jit/IonCode.h:424 parallelIonScript

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: decoder, Assigned: shu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tsan])

Attachments

(2 files)

The attached logfile shows a thread/data race (mozilla-central revision 44ba69cacd7e) detected by TSan (ThreadSanitizer). Typically, races reported by TSan are not false positives, but it is possible that the race is benign. Even in this case though, we should try to come up with a fix unless this would cause inacceptable performance issues. Also note that seemingly benign races can possibly be harmful (also depending on the compiler and the architecture) [1]. If the bug cannot be fixed, then this bug should be used to either make a compile-time annotation for blacklisting or add an entry to the runtime blacklist. [1] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
This looks like a PJS race.
Flags: needinfo?(shu)
This is a write-write race on |hasUncompiledCallTarget_ = true| on IonScripts. The value is never read in parallel. Looks benign to me. How do I annotate it as such?
Flags: needinfo?(shu)
Can a compiler ever generate bad code for this kind of races? I don't know much about the ARM code that this would generate.
This can likely be fixed with mozilla::Atomic<bool>, added in bug 965837.
Depends on: 965837
Assignee: general → shu
Status: NEW → ASSIGNED
Attachment #8371988 - Flags: review?(jdemooij) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: