Bug 967926 - Make hasUncompiledCallTarget_ Atomic to be extra careful. (r=jandem)